--- a/src/global/style/index.css
+++ b/src/global/style/index.css
@@ -945,6 +945,7 @@ footer>p{
     overflow: hidden;
     gap: 10px;
     margin-bottom: 9em;
+    position: relative;
 }
 .image-container>img{
     width: 100%;
@@ -984,10 +985,25 @@ footer>p{
 }
 .pdf-viewer-wrapper{
     margin-bottom: 12em;
+    z-index: 1;
 }
-.pdf-viewer{
-    height: 70vh;
 
+.pdf-viewer-wrapper>h1{
+    position: absolute;
+    text-transform: uppercase;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+    font-size: 30px;
+    z-index: 100;
+}
+
+.pdf-viewer{
+    z-index: 1;
+    height: 70vh;
  }
 
 
