--- a/src/global/style/index.css
+++ b/src/global/style/index.css
@@ -984,10 +984,35 @@ footer>p{
 }
 .pdf-viewer-wrapper{
     margin-bottom: 12em;
+    z-index: 1;
 }
-.pdf-viewer{
-    height: 70vh;
+.pdf-viewer-wrapper::before{
+    content: "";
+    z-index: 33;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 70%;
+background: linear-gradient(to top, rgba(255, 255, 255, 0.932) 60%, transparent);
+}
+.pdf-viewer-wrapper>h1{
+    position: absolute;
+    text-transform: uppercase;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+    font-size: 30px;
+    z-index: 100;
+}
 
+.pdf-viewer{
+    z-index: 1;
+    height: 70vh;
  }
 
 
