--- a/src/global/style/index.css
+++ b/src/global/style/index.css
@@ -945,6 +945,7 @@ footer>p{
     overflow: hidden;
     gap: 10px;
     margin-bottom: 9em;
+    position: relative;
 }
 .image-container>img{
     width: 100%;
@@ -986,17 +987,7 @@ footer>p{
     margin-bottom: 12em;
     z-index: 1;
 }
-.pdf-viewer-wrapper::before{
-    content: "";
-    z-index: 33;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    width: 100%;
-    height: 70%;
-background: linear-gradient(to top, rgba(255, 255, 255, 0.932) 60%, transparent);
-}
+
 .pdf-viewer-wrapper>h1{
     position: absolute;
     text-transform: uppercase;
